--- a/members.html
+++ b/members.html
@@ -46,6 +46,8 @@
       <div class="col-sm-6 col-sm-offset-2 text-left well">
         <div>
           <div class="media">
+            <h3>Members</h3>
+            <hr>
             <div class="media-left">
               <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">  
             </div>
