--- a/mygroups.html
+++ b/mygroups.html
@@ -54,7 +54,7 @@
         <div>
           <div class="media">
             <div class="media-body">
-               <h3>Groups</h3>
+               <h3>My Groups</h3>
                <hr>
               <div class="panel panel-info text-left">
                  <div class="panel-heading">LudoSpain</div>
