--- a/myprofile.html
+++ b/myprofile.html
@@ -197,11 +197,12 @@
     </div>
 
 
+      <!-----------------------------------REDES---------------------------------->
       <div id="mySidenav" class="sidenav" >
-        <a href="#" id="facebook">Facebook</a>
-        <a href="#" id="twitter">Twitter</a>
-        <a href="#" id="linkedin">Linkedin</a>
-        <a href="#" id="github">Github</a>
+        <a href="#" id="facebook">Facebook <img src="img/social/facebook.png" alt="" class="imgSocial"></a>
+        <a href="#" id="twitter">Twitter <img src="img/social/twitter.png" alt="" class="imgSocial"></a>
+        <a href="#" id="linkedin">Linkedin <img src="img/social/linkedin.png" alt="" class="imgSocial"></a>
+        <a href="#" id="github">Github <img src="img/social/git.png" alt="" class="imgSocial"></a>
       </div>
 
 
