--- a/myfriends.html
+++ b/myfriends.html
@@ -97,7 +97,7 @@
             </div>
             <div class="modal-body">
               <form>
-                <textarea class="form-control" rows="5" id="comment"></textarea>
+                <textarea class="form-control noresize" rows="5" id="comment"></textarea>
               </form>
             </div>
             <div class="modal-footer">
