--- a/myprofile.html
+++ b/myprofile.html
@@ -169,7 +169,7 @@
             <!--<a href="#" class="list-group-item"><span class="glyphicon glyphicon-plus"></span> Change avatar</a>-->
             <a href="myprofile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> My profile</a>
             <a href="messages.html" class="list-group-item"><span class="glyphicon glyphicon-envelope"></span> Messages <span class="badge">3</span></a>
-            <a href="#" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
+            <a href="notifications.html" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
             <a href="myfriends.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Friends</a>
             <a href="mygroups.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Groups</a>
           </div>
@@ -213,7 +213,7 @@
     </div>
 
 
-    <!-----------------------------------REDES---------------------------------->
+    <!-----------------------------------Social media---------------------------------->
           <div id="mySidenav" class="sidenav" >
             <a href="#" id="facebook">Facebook <img src="img/social/facebook.png" alt="" class="imgSocial"></a>
             <a href="#" id="twitter">Twitter <img src="img/social/twitter.png" alt="" class="imgSocial"></a>
