--- a/group.html
+++ b/group.html
@@ -55,8 +55,12 @@
           <div class="media">
             <div class="media-body">
                       <div class="row">
-                        <div class="col-md-9"><h3>LudoSpain</h3> </div>
-                        <div class="col-md-1 text-right"><button type="button" class="btn btn-warning">Join group</button></div>
+                        <div class="col-md-9">
+                          <h3>LudoSpain
+                            <button type="button" class="btn btn-warning"><span class="glyphicon glyphicon-plus"></span>	Join group</button>
+                          </h3>
+
+                        </div>
                       </div>
                         <hr>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -65,13 +69,13 @@
                        <div class="panel panel-info text-left">
                           <div class="panel-heading">Members</div>
                           <div class="panel-body">
-                            <div>
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <div class="text-center">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4 membersGroup" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4 membersGroup" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4 membersGroup" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4 membersGroup" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4 membersGroup" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4 membersGroup" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
                             </div>
                           </div>
                         </div>
