--- a/messages.html
+++ b/messages.html
@@ -74,7 +74,7 @@
                   </h3>
                 </div>
                 <div id="messages" class="collapse">
-                  <div class="well eliminar_margen">
+                  <div class="well" style="margin-bottom: 0px;">
                       <div class="media-left">
                           <img src="img/avatar.png" class="media-object" style="width:45px">
                       </div>
@@ -128,7 +128,7 @@
                 </h3>
               </div>
               <div id="messages1" class="collapse">
-                <div class="well eliminar_margen">
+                <div class="well " style="margin-bottom: 0px;">
                   <div class="media-left">
                       <img src="img/avatar.png" class="media-object" style="width:45px">
                   </div>
