--- a/messages.html
+++ b/messages.html
@@ -59,7 +59,9 @@
                 <div class="panel-heading">
                   <h3 class="panel-title">
                       <div class="media-left">
+                        <a href="profile.html">
                         <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" style = "width:60px" id="avatar" title="Ivanna Vilnanka" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">
+                        </a>
                       </div>
                       <div class="media-body">
                         <h4 class="media-heading">Ivanna Vilnanka</h4>
@@ -76,7 +78,9 @@
                 <div id="messages" class="collapse">
                   <div class="well" style="margin-bottom: 0px;">
                       <div class="media-left">
-                          <img src="img/avatar.png" class="media-object" style="width:45px">
+                        <a href="profile.html">
+                        <img src="img/avatar.png" class="media-object" style="width:45px">
+                        </a>
                       </div>
                       <div class="media-body">
                           <textarea class="form-control noresize" rows="2" id="comment"></textarea>
@@ -89,7 +93,9 @@
                       <br><hr>
                       <div class = "media">
                         <div class = "media-left">
-                          <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" style = "width:45px" id="avatar" title="Ivanna Vilnanka" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">
+                          <a href="profile.html">
+                        <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" style = "width:60px" id="avatar" title="Ivanna Vilnanka" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">
+                        </a>
                         </div>
                         <div class="media-body">
                           <h4 class="media-heading">Ivanna Vilnanka<small><i> Sent on February 20, 2016</i></small></h4>
@@ -99,7 +105,9 @@
                       <br><hr>
                       <div class = "media">
                         <div class = "media-left">
-                          <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" style = "width:45px" id="avatar" title="Ivanna Vilnanka" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">
+                          <a href="profile.html">
+                        <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" style = "width:60px" id="avatar" title="Ivanna Vilnanka" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">
+                        </a>
                         </div>
                         <div class="media-body">
                           <h4 class="media-heading">Ivanna Vilnanka<small><i> Sent on February 18, 2016</i></small></h4>
@@ -113,7 +121,9 @@
               <div class="panel-heading">
                 <h3 class="panel-title">
                   <div class="media-left">
+                    <a href="profile.html">
                     <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" style = "width:60px" id="avatar" title="Paulo Coelho" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">
+                    </a>
                   </div>
                   <div class="media-body">
                     <h4 class="media-heading">Paulo Coelho</h4>
@@ -130,7 +140,9 @@
               <div id="messages1" class="collapse">
                 <div class="well " style="margin-bottom: 0px;">
                   <div class="media-left">
-                      <img src="img/avatar.png" class="media-object" style="width:45px">
+                      <a href="profile.html">
+                        <img src="img/avatar.png" class="media-object" style="width:45px">
+                        </a>
                   </div>
                   <div class="media-body">
                       <textarea class="form-control noresize" rows="2" id="comment"></textarea>
@@ -143,7 +155,9 @@
                   <br><hr>
                   <div class = "media">
                     <div class = "media-left">
-                      <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" style = "width:45px" id="avatar" title="Paulo Coelho" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">
+                      <a href="profile.html">
+                    <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" style = "width:60px" id="avatar" title="Paulo Coelho" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">
+                    </a>
                     </div>
                     <div class="media-body">
                       <h4 class="media-heading">Paulo Coelho<small><i> Sent on February 19, 2016</i></small></h4>
@@ -175,9 +189,9 @@
           <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive3" id="avatar">
           <div class="list-group text-left" >
             <!--<a href="#" class="list-group-item"><span class="glyphicon glyphicon-plus"></span> Change avatar</a>-->
-            <a href="myprofile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> Edit profile</a>
+            <a href="myprofile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> My profile</a>
             <a href="messages.html" class="list-group-item"><span class="glyphicon glyphicon-envelope"></span> Messages <span class="badge">3</span></a>
-            <a href="#" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
+            <a href="notifications.html" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
             <a href="myfriends.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Friends</a>
             <a href="mygroups.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Groups</a>
           </div>
@@ -185,12 +199,24 @@
         <div id="searchPanel" class="well">
           <h3>Friends online</h3>
           <hr>
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
         </div>
           <div id="searchPanel" class="well">
             <div class="form-group">
@@ -209,16 +235,17 @@
     </div>
 
 
-      <div id="mySidenav" class="sidenav" >
-        <a href="#" id="facebook">Facebook</a>
-        <a href="#" id="twitter">Twitter</a>
-        <a href="#" id="linkedin">Linkedin</a>
-        <a href="#" id="github">Github</a>
-      </div>
+    <!-----------------------------------Social media---------------------------------->
+          <div id="mySidenav" class="sidenav" >
+            <a href="#" id="facebook">Facebook <img src="img/social/facebook.png" alt="" class="imgSocial"></a>
+            <a href="#" id="twitter">Twitter <img src="img/social/twitter.png" alt="" class="imgSocial"></a>
+            <a href="#" id="linkedin">Linkedin <img src="img/social/linkedin.png" alt="" class="imgSocial"></a>
+            <a href="#" id="github">Github <img src="img/social/git.png" alt="" class="imgSocial"></a>
+          </div>
 
 
   <footer class="container-fluid text-center">
-    <p>Footer Text</p>
+    <p>© 2017 M e e t L a n g u a g e s</p>
   </footer>
 </body>
 </html>
