--- a/create-meeting.html
+++ b/create-meeting.html
@@ -72,13 +72,6 @@
         </div>
       </div>
 
-
-
-
-
-
-
-
       <!-----------------------------------SIDENAV---------------------------------->
       <div class="col-sm-2">
         <div id="profilePanel" class="well">
@@ -87,9 +80,9 @@
           <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive3" id="avatar">
           <div class="list-group text-left" >
             <!--<a href="#" class="list-group-item"><span class="glyphicon glyphicon-plus"></span> Change avatar</a>-->
-            <a href="edit-profile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> Edit profile</a>
+            <a href="myprofile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> My profile</a>
             <a href="messages.html" class="list-group-item"><span class="glyphicon glyphicon-envelope"></span> Messages <span class="badge">3</span></a>
-            <a href="#" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
+            <a href="notifications.html" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
             <a href="myfriends.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Friends</a>
             <a href="mygroups.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Groups</a>
           </div>
@@ -97,12 +90,24 @@
         <div id="searchPanel" class="well">
           <h3>Friends online</h3>
           <hr>
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
         </div>
           <div id="searchPanel" class="well">
             <div class="form-group">
@@ -121,17 +126,17 @@
     </div>
 
 
-      <div id="mySidenav" class="sidenav" >
-        <a href="#" id="facebook">Facebook <img src="img/social/facebook.png" alt="" class="imgSocial"></a>
-        <a href="#" id="twitter">Twitter <img src="img/social/twitter.png" alt="" class="imgSocial"></a>
-        <a href="#" id="linkedin">Linkedin <img src="img/social/linkedin.png" alt="" class="imgSocial"></a>
-        <a href="#" id="github">Github <img src="img/social/git.png" alt="" class="imgSocial"></a>
-      </div>
+    <!-----------------------------------Social media---------------------------------->
+          <div id="mySidenav" class="sidenav" >
+            <a href="#" id="facebook">Facebook <img src="img/social/facebook.png" alt="" class="imgSocial"></a>
+            <a href="#" id="twitter">Twitter <img src="img/social/twitter.png" alt="" class="imgSocial"></a>
+            <a href="#" id="linkedin">Linkedin <img src="img/social/linkedin.png" alt="" class="imgSocial"></a>
+            <a href="#" id="github">Github <img src="img/social/git.png" alt="" class="imgSocial"></a>
+          </div>
 
 
-      <!-- Comiendo del FOOTER -->
-      <footer class="container-fluid text-center">
-          <p>© 2017 M e e t L a n g u a g e s</p>
-      </footer
+  <footer class="container-fluid text-center">
+    <p>© 2017 M e e t L a n g u a g e s</p>
+  </footer>
 </body>
 </html>
