--- a/meeting.html
+++ b/meeting.html
@@ -80,7 +80,9 @@
                               <!-- Comentarios -->
                                 <div class="media">
                                     <div class="media-left">
+                                        <a href="profile.html">
                                         <img src="img/avatar.png" class="media-object" style="width:45px">
+                                        </a>
                                     </div>
                                     <div class="media-body">
                                         <h4 class="media-heading">John Doe <small><i>Posted on February 19, 2016</i></small></h4>
@@ -93,7 +95,9 @@
                                         <div id="comment" class="collapse">
                                             <div class="well container-fluid">
                                                 <div class="col-sm-2">
+                                                    <a href="profile.html">
                                                     <img src="img/avatar.png" class="media-object" style="width:45px">
+                                                    </a>
                                                 </div>
                                                 <div class="col-sm-10">
                                                     <textarea class="form-control noresize" rows="2" id="comment"></textarea>
@@ -104,7 +108,9 @@
                                         <!-- Nested media object -->
                                         <div class="media">
                                             <div class="media-left">
+                                                <a href="profile.html">
                                                 <img src="img/avatar.png" class="media-object" style="width:45px">
+                                                </a>
                                             </div>
                                             <div class="media-body">
                                                 <h4 class="media-heading">John Doe <small><i>Posted on February 20, 2016</i></small></h4>
@@ -117,7 +123,9 @@
                                                 <div id="comment2" class="collapse">
                                                     <div class="well container-fluid">
                                                         <div class="col-sm-2">
+                                                           <a href="profile.html">
                                                             <img src="img/avatar.png" class="media-object" style="width:45px">
+                                                            </a>
                                                         </div>
                                                         <div class="col-sm-10">
                                                             <textarea class="form-control noresize" rows="2" id="comment"></textarea>
@@ -127,7 +135,9 @@
                                                 <!-- Nested media object -->
                                                 <div class="media">
                                                     <div class="media-left">
+                                                        <a href="profile.html">
                                                         <img src="img/avatar.png" class="media-object" style="width:45px">
+                                                        </a>
                                                     </div>
                                                     <div class="media-body">
                                                         <h4 class="media-heading">John Doe <small><i>Posted on February 21, 2016</i></small></h4>
@@ -141,7 +151,9 @@
                                                         <div id="comment3" class="collapse">
                                                             <div class="well container-fluid">
                                                                 <div class="col-sm-2">
+                                                                    <a href="profile.html">
                                                                     <img src="img/avatar.png" class="media-object" style="width:45px">
+                                                                    </a>
                                                                 </div>
                                                                 <div class="col-sm-10">
                                                                     <textarea class="form-control noresize" rows="2" id="comment"></textarea>
@@ -156,7 +168,9 @@
                                             <!-- Nested media object -->
                                             <div class="media">
                                                 <div class="media-left">
+                                                   <a href="profile.html">
                                                     <img src="img/avatar.png" class="media-object" style="width:45px">
+                                                    </a>
                                                 </div>
                                                 <div class="media-body">
                                                     <h4 class="media-heading">Jane Doe <small><i>Posted on February 20, 2016</i></small></h4>
@@ -170,7 +184,9 @@
                                                     <div id="comment4" class="collapse">
                                                         <div class="well container-fluid">
                                                             <div class="col-sm-2">
+                                                                <a href="profile.html">
                                                                 <img src="img/avatar.png" class="media-object" style="width:45px">
+                                                                </a>
                                                             </div>
                                                             <div class="col-sm-10">
                                                                 <textarea class="form-control noresize" rows="2" id="comment"></textarea>
@@ -185,7 +201,9 @@
                                     <!-- Nested media object -->
                                     <div class="media">
                                         <div class="media-left">
-                                            <img src="img/avatar.png" class="media-object" style="width:45px">
+                                            <a href="profile.html">
+                                        <img src="img/avatar.png" class="media-object" style="width:45px">
+                                        </a>
                                         </div>
                                         <div class="media-body">
                                             <h4 class="media-heading">Jane Doe <small><i>Posted on February 19, 2016</i></small></h4>
@@ -198,7 +216,9 @@
                                             <div id="comment5" class="collapse">
                                                 <div class="well container-fluid">
                                                     <div class="col-sm-2">
-                                                        <img src="img/avatar.png" class="media-object" style="width:45px">
+                                                        <a href="profile.html">
+                                        <img src="img/avatar.png" class="media-object" style="width:45px">
+                                        </a>
                                                     </div>
                                                     <div class="col-sm-10">
                                                         <textarea class="form-control noresize" rows="2" id="comment"></textarea>
@@ -215,67 +235,72 @@
             </div>
         </div>
 
-
-
-
-
-
-
-
         <!-----------------------------------SIDENAV---------------------------------->
-        <div class="col-sm-2">
-            <div id="profilePanel" class="well">
-                <h3>Hello user!</h3>
-                <hr>
-                <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive3" id="avatar">
-                <div class="list-group text-left">
-                    <!--<a href="#" class="list-group-item"><span class="glyphicon glyphicon-plus"></span> Change avatar</a>-->
-                    <a href="edit-profile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> Edit profile</a>
-                    <a href="messages.html" class="list-group-item"><span class="glyphicon glyphicon-envelope"></span> Messages <span class="badge">3</span></a>
-                    <a href="#" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
-                    <a href="myfriends.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Friends</a>
-                    <a href="mygroups.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Groups</a>
-                </div>
-            </div>
-            <div id="searchPanel" class="well">
-                <h3>Friends online</h3>
-                <hr>
-                <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-                <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-                <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-                <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-                <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-                <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-            </div>
-            <div id="searchPanel" class="well">
-                <div class="form-group">
-
-                    <h4><span class="glyphicon glyphicon-search"></span> Search:</h4>
-                    <hr>
-                    <form action="">
-                        <input type="text" name="searchAds" class="col-xs-12">
-                        </br>
-                        </br>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
-                </div>
-            </div>
+      <div class="col-sm-2">
+        <div id="profilePanel" class="well">
+          <h3>Hello user!</h3>
+          <hr>
+          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive3" id="avatar">
+          <div class="list-group text-left" >
+            <!--<a href="#" class="list-group-item"><span class="glyphicon glyphicon-plus"></span> Change avatar</a>-->
+            <a href="myprofile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> My profile</a>
+            <a href="messages.html" class="list-group-item"><span class="glyphicon glyphicon-envelope"></span> Messages <span class="badge">3</span></a>
+            <a href="notifications.html" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
+            <a href="myfriends.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Friends</a>
+            <a href="mygroups.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Groups</a>
+          </div>
         </div>
+        <div id="searchPanel" class="well">
+          <h3>Friends online</h3>
+          <hr>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+          <a href="profile.html">
+            <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+          </a>
+        </div>
+          <div id="searchPanel" class="well">
+            <div class="form-group">
+
+                  <h4><span class="glyphicon glyphicon-search"></span> Search:</h4>
+                  <hr>
+                  <form action="">
+                  <input type="text" name="searchAds" class="col-xs-12">
+                  </br>
+                  </br>
+                  <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+              </div>
+        </div>
+      </div>
     </div>
 
-    <!------------------------------------- SOCIAL ----------------------------------------------------->
-    <div id="mySidenav" class="sidenav">
-        <a href="#" id="facebook">Facebook <img src="img/social/facebook.png" alt="" class="imgSocial"></a>
-        <a href="#" id="twitter">Twitter <img src="img/social/twitter.png" alt="" class="imgSocial"></a>
-        <a href="#" id="linkedin">Linkedin <img src="img/social/linkedin.png" alt="" class="imgSocial"></a>
-        <a href="#" id="github">Github <img src="img/social/git.png" alt="" class="imgSocial"></a>
-    </div>
+
+    <!-----------------------------------Social media---------------------------------->
+          <div id="mySidenav" class="sidenav" >
+            <a href="#" id="facebook">Facebook <img src="img/social/facebook.png" alt="" class="imgSocial"></a>
+            <a href="#" id="twitter">Twitter <img src="img/social/twitter.png" alt="" class="imgSocial"></a>
+            <a href="#" id="linkedin">Linkedin <img src="img/social/linkedin.png" alt="" class="imgSocial"></a>
+            <a href="#" id="github">Github <img src="img/social/git.png" alt="" class="imgSocial"></a>
+          </div>
 
 
-    <!-- Comiendo del FOOTER -->
-    <footer class="container-fluid text-center">
-        <p>© 2017 M e e t L a n g u a g e s</p>
-    </footer
+  <footer class="container-fluid text-center">
+    <p>© 2017 M e e t L a n g u a g e s</p>
+  </footer>
 </body>
 
 </html>
