--- a/myprofile.html
+++ b/myprofile.html
@@ -138,16 +138,32 @@
                   </ul>
                 </div>
                 <div id="films" class="tab-pane fade">
-                  <p>Drama, Animation, Thriller.</p>
+                  <ul>
+                    <li>Drama</li>
+                    <li>Animation</li>
+                    <li>Thriller</li>
+                  </ul>
                 </div>
                 <div id="series" class="tab-pane fade">
-                  <p>Braking bad, The Walking Dead, House</p>
+                  <ul>
+                    <li>Breaking bad</li>
+                    <li>The walking dead</li>
+                    <li>House</li>
+                  </ul>
                 </div>
                 <div id="sports" class="tab-pane fade">
-                  <p>Football, Basketball, Tennis</p>
+                  <ul>
+                    <li>Football</li>
+                    <li>Basketball</li>
+                    <li>Tennis</li>
+                  </ul>
                 </div>
                 <div id="activities" class="tab-pane fade">
-                  <p>Science, Sports, Astronomy</p>
+                  <ul>
+                    <li>Science</li>
+                    <li>Sports</li>
+                    <li>Astronomy</li>
+                  </ul>
                 </div>
               </div>
             </div>
