--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
                                 <input type="password" class="form-control" id="pwd" placeholder="Enter password">
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-1 col-sm-10 text-left">
+                        <div class="form-group text-right">
+                            <div class="col-sm-10 text-right">
                                 <div class="checkbox">
                                     <label><input type="checkbox"> Remember me</label>
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-1 col-sm-10 text-left">
+                        <div class="form-group text-left">
+                            <div class="col-sm-10 text-right">
                                 <button type="submit" class="btn btn-default">Submit</button>
                             </div>
                         </div>
@@ -180,16 +180,16 @@
                 <div>
                     <form class="contact">
                         <div class="form-group col-sm-offset-1 col-sm-10">
-                            <input type="text" class="form-control" id="name" placeholder="Your Name...">
+                            <input type="text" class="form-control" id="name" placeholder="Your Name">
                         </div>
                         <div class="form-group col-sm-offset-1 col-sm-10">
-                            <input type="email" class="form-control" id="email" placeholder="Your Email...">
+                            <input type="email" class="form-control" id="email" placeholder="Your Email">
                         </div>
                         <div class="form-group col-sm-offset-1 col-sm-10">
                             <input type="text" class="form-control" id="subjet" placeholder="Subjet">
                         </div>
                         <div class="form-group col-sm-offset-1 col-sm-10">
-                            <textarea class="form-control noresize" rows="6" id="aboutMe" laceholder="Your Message..."></textarea>
+                            <textarea class="form-control noresize" rows="6" id="aboutMe" placeholder="Your Message"></textarea>
                         </div>
                         <div class="col-sm-offset-1 col-sm-10">
                             <button type="submit" class="btn btn-primary btn-block">Submit</button>
