--- a/mygroups.html
+++ b/mygroups.html
@@ -57,22 +57,22 @@
                <h3>My Groups</h3>
                <hr>
               <div class="panel panel-info text-left">
-                 <div class="panel-heading">LudoSpain</div>
-                 <div class="panel-body">
-                   <div class="media">
-                   <div class="media-left">
-                   <a href="profile.html">
-                   <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover" data-original-title="Nombre Apellido"></div>
-                   </a>
+                   <div class="panel-heading">LudoSpain</div>
+                     <div class="panel-body">
+                       <div class="media">
+                         <div class="media-left">
+                           <a href="profile.html">
+                           <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover" data-original-title="Nombre Apellido"></a>
+                         </div>
 
-                   <div class ="media-body">
-                     <p>Join to play some boardgames while you learn Spanish!</p>
-                   </div>
-                   </div>
-                   <div class="text-right">
-                     <a href="group.html"><button type="button" class="btn btn-warning">Group page</button></a>
-                   </div>
-                 </div>
+                         <div class ="media-body">
+                           <p>Join to play some boardgames while you learn Spanish!</p>
+                         </div>
+                       </div>
+                       <div class="text-right">
+                         <a href="group.html"><button type="button" class="btn btn-warning">Group page</button></a>
+                      </div>
+                  </div>
                </div>
                <div class="text-center">
                  <a href="create-group.html"><button type="button" class="btn btn-primary">
