--- a/meetings.html
+++ b/meetings.html
@@ -37,7 +37,7 @@
             <li><a href="members.html">Members</a></li>
             <li><a href="groups.html">Groups</a></li>
             <li><a href="meetings.html">Meetings</a></li>
-             <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+            <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
           </ul>
         </div>
       </div>
